# HeadlessEngine

./: .clang-format  .gitignore  Build.sh  CMakeLists.txt  README.md  default_debug.cap  output_fs.spv  output_fs_glsl.spv  output_fs_hlsl_glslang.spv  output_vs.spv  output_vs_glsl.spv  output_vs_hlsl_glslang.spv  xmake.lua
src/engine/: CMakeLists.txt  engine.lua
src/engine/application/: application.lua
src/engine/application/private/: application.cpp  window.cpp
src/engine/application/private/inputs/: input_manager.cpp
src/engine/application/private/win32/: win32_application.cpp  win32_application.h  win32_inputs.cpp  win32_inputs.h  win32_window.cpp  win32_window.h
src/engine/application/public/application/: application.h  window.h
src/engine/asset_manager/: asset_manager.lua
src/engine/asset_manager/private/: asset_id.cpp  asset_ptr.cpp
src/engine/asset_manager/public/asset_manager/: asset_id.h  asset_manager.h  asset_ptr.h
src/engine/ecs/: ecs.lua
src/engine/ecs/private/: actor.cpp  actor_meta_data.cpp  component.cpp  component_meta_class.cpp  ecs.cpp  ecs_new.cpp  ecs_test.cpp  ecs_test.h  family.cpp  family.h  object.cpp  object_ptr.cpp  object_ptr.h  system.cpp
src/engine/ecs/public/ecs/: SystemTick.h  actor.h  actor_meta_data.h  common.h  component.h  component_meta_class.h  component_new.h  component_ptr.h  ecs.h  ecs_new.h  ecs_type.h  family.h  family_signature.h  method_runner.h  object.h  system.h
src/engine/graphics/: graphics.lua
src/engine/graphics/private/: StaticMesh.cpp  buffer.cpp  command_buffer.cpp  gfx.cpp  master_material.cpp  material_instance.cpp  mesh.cpp  mesh_batch.cpp  physical_device.cpp  primitives.cpp  render_pass.cpp  render_pass_instance.cpp  render_pass_reference.cpp  render_target.cpp  resource_handle.cpp  sampler.cpp  surface.cpp  texture.cpp  view.cpp
src/engine/graphics/private/framegraph/: framegraph.cpp  framegraph_resource.cpp
src/engine/graphics/private/materials/: master_material.cpp  material_instance.cpp
src/engine/graphics/private/resource/: device.cpp  gpu_resource.cpp
src/engine/graphics/private/types/: frustum.cpp
src/engine/graphics/private/vulkan/: allocator.cpp  allocator.h  unit.h  (+55 more)
src/engine/physics/: physics.lua
src/engine/physics/private/: collider.cpp  physic_scene.cpp
src/engine/private/: engine_interface.cpp  game_engine.cpp
src/engine/private/assets/: asset_base.cpp  asset_id.cpp  asset_material.cpp  asset_material_instance.cpp  asset_mesh_data.cpp  asset_ptr.cpp  asset_shader.cpp  asset_shader_buffer.cpp  asset_texture.cpp
src/engine/private/ios/: mesh_importer.cpp  scene_importer.cpp
src/engine/private/misc/: capabilities.cpp  debug_draw.cpp  primitives.cpp
src/engine/private/rendering/: gfx_context.cpp  gfx_instance.cpp  graphics.cpp
src/engine/private/scene/: node_base.cpp  node_camera.cpp  node_mesh.cpp  scene.cpp
src/engine/profiler/: profiler.lua
src/engine/profiler/private/: profiler.cpp
src/engine/public/: engine_interface.h
src/engine/public/assets/: asset_base.h  asset_material.h  asset_material_instance.h  asset_mesh.h  asset_mesh_data.h  asset_ptr.h  asset_shader.h  asset_shader_buffer.h  asset_texture.h
src/engine/public/ios/: mesh_importer.h  scene_importer.h
src/engine/public/misc/: Frustum.h  capabilities.h  primitives.h
src/engine/public/rendering/: debug_draw.h  gfx_context.h  gfx_instance.h
src/engine/public/scene/: node_camera.h  node_mesh.h  scene_proxy.h
src/engine/reflection/: reflection.lua
src/engine/scene/: scene.lua
src/engine/scene/private/: SubScene.cpp  scene.cpp
src/engine/shader_builder/: graphics.lua  shader_builder.lua
src/engine/shader_builder/private/: compiler.cpp  custom_includer.cpp  custom_includer.h  internal.cpp  internal.h  parser.cpp  shader.cpp  shader_builder.cpp  shader_builder_test.cpp  shader_module.cpp  shader_parser.cpp  shader_reflection.cpp
src/engine/shader_builder/public/: shader.h  shader_builder_test.h  shader_parser.h  shader_reflection.h
src/engine/static_mesh/: ecs.lua  static_mesh.lua
src/engine/static_mesh/private/: static_mesh_component.cpp
src/engine/types/: types.lua
src/engine/types/private/: type_format.cpp
src/engine/ui/: ui.lua
src/engine/ui/private/: imgui_wrapper.cpp  ui.cpp
src/engine/ui/public/: imgui_wrapper.h  ui.h
src/tests/heGameTest/: CMakeLists.txt  game_test.lua
src/tests/heGameTest/private/: camera_basic_controller.cpp  main.cpp  main_game_interface.cpp  testGameInterface.cpp
src/tests/heGameTest/public/: camera_basic_controller.h  main_game_interface.h  testGameInterface.h
(+313 files in other folders)
